--- a/src/app/weekly-view/weekly-view.component.html
+++ b/src/app/weekly-view/weekly-view.component.html
@@ -7,6 +7,12 @@
     [orders]="getDayOrders(date)"
   >
   </app-day-column>
+
+  <app-view-footer class="weekly-view__footer">
+    <button class="btn btn-primary weekly-view__submit">
+      Save changes
+    </button>
+  </app-view-footer>
 </ng-container>
 
 <!-- preloader -->
