--- a/src/app/weekly-view/view-footer/view-footer.component.html
+++ b/src/app/weekly-view/view-footer/view-footer.component.html
@@ -1,3 +1,5 @@
-<div class="view-footer__contents">
-  <ng-content></ng-content>
+<div class="view-footer" [ngClass]="{'view-footer__hidden': !visible}">
+  <div class="view-footer__contents">
+    <ng-content></ng-content>
+  </div>
 </div>
