--- a/src/app/weekly-view/view-footer/view-footer.component.scss
+++ b/src/app/weekly-view/view-footer/view-footer.component.scss
@@ -1,9 +1,18 @@
-:host {
+.view-footer {
   display: block;
   background: rgba(250, 250, 250, 0.9);
   -webkit-backdrop-filter: blur(5px);
   padding: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 1;
+  transition: transform 0.3s ease 0s;
+
+  &.view-footer__hidden {
+    transform: translate3d(0, 100%, 0)
+  }
 }
 
 .view-footer__contents {
