feat(weekly): progress

--- a/src/app/weekly-view/view-footer/view-footer.component.scss
+++ b/src/app/weekly-view/view-footer/view-footer.component.scss
@@ -18,3 +18,12 @@
 .view-footer__contents {
   text-align: center;
 }
+
+
+@media (max-width: 768px) {
+  .view-footer__btn--submit {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+  }
+}
