--- a/src/app/weekly-view/view-footer/view-footer.component.html
+++ b/src/app/weekly-view/view-footer/view-footer.component.html
@@ -1,5 +1,13 @@
 <div class="view-footer" [ngClass]="{'view-footer__hidden': !visible}">
   <div class="view-footer__contents">
-    <ng-content></ng-content>
+    <button
+      *ngIf="!busy"
+      class="btn btn-primary view-footer__btn--submit"
+    >
+      Save changes
+    </button>
+    <button *ngIf="busy" class="btn btn-link" [clrLoading]="true">
+      Saving changes...
+    </button>
   </div>
 </div>
