--- a/src/app/weekly-view/dish-group/dish-group.component.html
+++ b/src/app/weekly-view/dish-group/dish-group.component.html
@@ -6,7 +6,7 @@
     <button
       *ngFor="let dish of dishes"
       class="btn btn-block dish-group__selector btn-sm"
-      [ngClass]="{'btn-success': dish.id === selectedId, 'btn-link': dish.id !== selectedId}"
+      [ngClass]="{'btn-success': dish.id === value, 'btn-link': dish.id !== value}"
       (click)="onItemSelect(dish)"
     >
       <clr-icon shape="caret" dir="right" class="dish-group__before"></clr-icon> {{dish.label}}
