feat(weekly): react on changes and form errors

--- a/src/app/weekly-view/day-column/day-column.component.html
+++ b/src/app/weekly-view/day-column/day-column.component.html
@@ -21,6 +21,7 @@
         [name]="group.key"
         [label]="group.tag"
         [dishes]="group.value"
+        [highlight]="errorGroup == group.key"
         [(ngModel)]="orderedItems[group.key]"
         (change)="onDishSelect(group.key, $event)"
       >
