--- a/src/app/shared/components/alert/alert.component.html
+++ b/src/app/shared/components/alert/alert.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-{{type}}">
+<div class="alert alert-{{type}}" [ngStyle]="styles">
   <div class="alert-items">
     <div class="alert-item static">
       <div class="alert-icon-wrapper">
