--- a/src/app/weekly-view/weekly-view.component.html
+++ b/src/app/weekly-view/weekly-view.component.html
@@ -11,7 +11,7 @@
 
   <app-view-footer
     class="weekly-view__footer"
-    [visible]="dirty"
+    [showSaveButton]="dirty && !formHasError"
     [showError]="formHasError"
     [errorMessage]="lastFormError"
   >
