--- a/src/app/weekly-view/view-footer/view-footer.component.scss
+++ b/src/app/weekly-view/view-footer/view-footer.component.scss
@@ -1,5 +1,7 @@
 .view-footer {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background: rgba(250, 250, 250, 0.9);
   -webkit-backdrop-filter: blur(5px);
   padding: 10px;
@@ -15,8 +17,17 @@
   }
 }
 
+.view-footer__nav {
+  margin: 0 5px;
+}
+
 .view-footer__contents {
   text-align: center;
+  flex: 1;
+}
+
+.view-footer__aside {
+  width: auto;
 }
 
 
