--- a/src/app/weekly-view/view-footer/view-footer.component.html
+++ b/src/app/weekly-view/view-footer/view-footer.component.html
@@ -1,6 +1,11 @@
 <div class="view-footer" [ngClass]="{'view-footer__hidden': !visible}">
   <div class="view-footer__aside">
-    <button class="btn btn-icon view-footer__nav">
+    <button
+      class="btn btn-icon view-footer__nav"
+      [disabled]="busy"
+      (click)="backward()"
+      title="Previous week"
+    >
       <clr-icon shape="caret" dir="left"></clr-icon>
     </button>
   </div>
@@ -19,7 +24,12 @@
     </span>
   </div>
   <div class="view-footer__aside">
-    <button class="btn btn-icon view-footer__nav">
+    <button
+      class="btn btn-icon view-footer__nav"
+      [disabled]="busy"
+      (click)="forward()"
+      title="Next week"
+    >
       <clr-icon shape="caret" dir="right"></clr-icon>
     </button>
   </div>
