feat(weekly): highlight current date

--- a/src/app/weekly-view/day-column/day-column.component.html
+++ b/src/app/weekly-view/day-column/day-column.component.html
@@ -1,5 +1,5 @@
 <div class="day-column">
-  <div class="day-column__header">
+  <div class="day-column__header" [ngClass]="{'text-danger': highlight}">
     <div class="day-column__header__content">
       <div class="day-column__title">
         <span class="day-column__date">
