feat(weelky): show "empty" on empty menu

--- a/src/app/weekly-view/day-column/day-column.component.html
+++ b/src/app/weekly-view/day-column/day-column.component.html
@@ -29,4 +29,7 @@
        </app-dish-group>
     </ng-container>
   </div>
+  <div *ngIf="!hasDishes" class="day-column__empty-msg">
+    No items
+  </div>
 </div>
