feat: add notifications view

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,4 +1,5 @@
 <clr-main-container class="main-container">
+  <app-notification></app-notification>
   <app-header [user]="currentUser" (logout)="onLogoutClick()"></app-header>
 
     <router-outlet></router-outlet>
