--- a/src/app/weekly-view/weekly-view.component.html
+++ b/src/app/weekly-view/weekly-view.component.html
@@ -19,6 +19,7 @@
     [errorMessage]="lastFormError"
     [busy]="isLoading || saveStatus.isLoading"
     (navigate)="onNavigate($event)"
+    (save)="onSave()"
   >
   </app-view-footer>
 
