misc: move weekly view to '/calendar' route

--- a/src/app/container/dashboard/dashboard.component.html
+++ b/src/app/container/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
       <a routerLink="/orders" routerLinkActive="active" class="nav-link">
         Manage orders
       </a>
-      <a routerLink="/orders/weekly" routerLinkActive="active" class="nav-link">
+      <a routerLink="/calendar" routerLinkActive="active" class="nav-link">
         Weekly view
       </a>
     </section>
