fix(weekly): change nav buttons style

--- a/src/app/weekly-view/view-footer/view-footer.component.html
+++ b/src/app/weekly-view/view-footer/view-footer.component.html
@@ -1,7 +1,7 @@
 <div class="view-footer" [ngClass]="{'view-footer__hidden': !visible}">
   <div class="view-footer__aside">
     <button
-      class="btn btn-icon view-footer__nav"
+      class="btn btn-primary btn-icon view-footer__nav"
       [disabled]="busy"
       (click)="backward()"
       title="Previous week"
@@ -34,7 +34,7 @@
   </div>
   <div class="view-footer__aside">
     <button
-      class="btn btn-icon view-footer__nav"
+      class="btn btn-primary btn-icon view-footer__nav"
       [disabled]="busy"
       (click)="forward()"
       title="Next week"
