feat(weekly): pop-ups

--- a/src/app/weekly-view/day-column/day-column.component.html
+++ b/src/app/weekly-view/day-column/day-column.component.html
@@ -25,6 +25,7 @@
         [(ngModel)]="orderedItems[group.key]"
         (change)="onDishSelect(group.key, $event)"
         [disabled]="disabled"
+        [popUpDirection]="popUpDir"
       >
        </app-dish-group>
     </ng-container>
