--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -32,7 +32,7 @@
         {{error}}
       </div>
       <button [clrLoading]="isLoading" type="submit" class="btn btn-primary">NEXT</button>
-      <a href="https://people.llnw.net" class="signup" target="_blank">Sign up for a Company ID</a>
+      <a href="https://people.llnw.net" class="signup" target="_blank">Forgot password?</a>
     </div>
   </form>
 </div>
