--- a/src/app/weekly-view/dish-group/dish-group.component.html
+++ b/src/app/weekly-view/dish-group/dish-group.component.html
@@ -3,7 +3,7 @@
     {{label}}
   </div>
   <div class="card-block dish-group__list">
-    <div class="dish-group__item" *ngFor="let dish of dishes">
+    <div class="dish-group__item popover-trigger" *ngFor="let dish of dishes">
       <button
         class="btn btn-block dish-group__selector btn-sm"
         [ngClass]="{'btn-success': dish.id === value, 'btn-link': dish.id !== value}"
@@ -15,13 +15,16 @@
           {{dish.label}}
         </span>
       </button>
-      <span class="dish-group__pop-up {{popUpDirection}}">
+      <app-popover [direction]="popUpDirection">
+         {{getPopUpText(dish)}}
+      </app-popover>
+      <!-- <span class="dish-group__pop-up {{popUpDirection}}">
         <span class="dish-group__pop-up__content">
           <span class="dish-group__pop-up__block">
             {{getPopUpText(dish)}}
           </span>
         </span>
-      </span>
+      </span> -->
     </div>
   </div>
 </div>
