feat: popover - add delay directive

--- a/src/app/shared/components/popover/popover.component.scss
+++ b/src/app/shared/components/popover/popover.component.scss
@@ -7,7 +7,7 @@ $pop-border-bg: #ccc;
   body .popover-trigger {
     position: relative;
 
-    &:hover {
+    &.popover-trigger--triggered {
       .popover {
         display: inline-block;
       }
