--- a/src/app/weekly-view/dish-group/dish-group.component.html
+++ b/src/app/weekly-view/dish-group/dish-group.component.html
@@ -3,7 +3,7 @@
     {{label}}
   </div>
   <div class="card-block dish-group__list">
-    <div class="dish-group__item popover-trigger" *ngFor="let dish of dishes">
+    <div class="dish-group__item" appPopoverTrigger [delay]="300" *ngFor="let dish of dishes">
       <button
         class="btn btn-block dish-group__selector btn-sm"
         [ngClass]="{'btn-success': dish.id === value, 'btn-link': dish.id !== value}"
@@ -18,13 +18,6 @@
       <app-popover [direction]="popUpDirection">
          {{getPopUpText(dish)}}
       </app-popover>
-      <!-- <span class="dish-group__pop-up {{popUpDirection}}">
-        <span class="dish-group__pop-up__content">
-          <span class="dish-group__pop-up__block">
-            {{getPopUpText(dish)}}
-          </span>
-        </span>
-      </span> -->
     </div>
   </div>
 </div>
