--- a/src/app/weekly-view/day-column/day-column.component.scss
+++ b/src/app/weekly-view/day-column/day-column.component.scss
@@ -31,6 +31,7 @@
 @media (min-width: 768px) {
   .day-column {
     min-height: 100%;
+    padding-bottom: 160px;
   }
 
   .day-column__empty-msg {
